--- a/style.css
+++ b/style.css
@@ -56,6 +56,35 @@ a {
 .nav-bar #logo span {
   color: #7cf03d;
 }
+/* Hamburger styling */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.hamburger span {
+  width: 25px;
+  height: 3px;
+  background-color: #fff;
+  transition: 0.4s;
+}
+
+/* Hamburger animation */
+.hamburger.active span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.hamburger.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger.active span:nth-child(3) {
+  transform: rotate(-45deg) translate(5px, -5px);
+}
+
 /* Hero-section styling */
 .hero-section {
   text-align: center;
@@ -286,8 +315,8 @@ a {
 .contact {
   padding: 80px 10%;
   text-align: center;
-  background: #2e3c55; 
-  color: #98e072; 
+  background: #2e3c55;
+  color: #98e072;
   animation: fadeIn 1s ease-in;
   margin-top: 100px;
 }
@@ -299,12 +328,12 @@ a {
 }
 
 .contact h2 span {
-  color: #fff; 
+  color: #fff;
 }
 
 .contact p {
   font-size: 1.1rem;
-  color: #d1f3bf; 
+  color: #d1f3bf;
   margin-bottom: 30px;
 }
 
@@ -344,4 +373,101 @@ a {
     transform: translateY(0);
   }
 }
+@media (max-width: 600px) {
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+  }
+  .nav-bar ul li {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+  }
 
+  .nav-menu {
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background-color: #2e3c55;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.4s ease-in-out;
+  }
+
+  .nav-menu.active {
+    max-height: 500px;
+  }
+
+  .nav-menu li {
+    padding: 15px;
+    text-align: center;
+  }
+   /* Hero styling */
+  .hero-section {
+    padding-top: 170px;
+    line-height: 25px;
+  }
+  .hero-section h1 {
+    font-size: 35px;
+  }
+  .hero-section h2 {
+    font-size: 25px;
+  }
+  .hero-section p {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-left: 10px;
+    font-size: 17px;
+  }
+  /* About styling */
+  #about {
+    padding: 20px;
+  }
+  .about-description {
+    padding-top: 90px;
+    padding-bottom: 40px;
+  }
+  .about-text {
+    max-width: 1200px;
+    padding-left: 5px;
+    line-height: 30px;
+    font-size: 20px;
+    text-align: justify;
+  }
+  /* Project styling */
+  #projects h2 {
+    font-size: 50px;
+    padding-top: 100px;
+    padding-bottom: 40px;
+  }
+  .project-container {
+    display: flex;
+    flex-direction: column;
+  }
+  /* Experience styling */
+  #experience h2 {
+    padding-top: 110px;
+    padding-bottom: 70px;
+  }
+  .experience-card {
+    padding: 1.5rem;
+    line-height: 30px;
+    width: 350px;
+    margin-left: 12px;
+  }
+  /* Skill styling */
+  .skill-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    width: 300px;
+    margin: auto;
+  }
+  /* contact styling */
+  .contact {
+    margin-top: 50px;
+  }
+}
