--- a/style.css
+++ b/style.css
@@ -5,18 +5,21 @@
   padding: 0;
   box-sizing: border-box;
 }
-body,
-html {
+body {
   height: 100vh;
   width: 100%;
+  overflow-x: hidden;
   background-color: #2e3c55;
+}
+html {
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
 }
 /* Header styling */
 .nav-bar {
-  position: fixed;
+  position: relative;
   left: 0;
   top: 0;
   width: 100%;
@@ -56,20 +59,22 @@ a {
 .nav-bar #logo span {
   color: #7cf03d;
 }
+
 /* Hamburger styling */
 .hamburger {
   display: none;
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
-  z-index: 2;
+  z-index: 1100;
 }
 
 .hamburger span {
-  width: 25px;
   height: 3px;
-  background-color: #fff;
-  transition: 0.4s;
+  width: 25px;
+  background: #98e072;
+  margin: 4px 0;
+  border-radius: 2px;
 }
 
 /* Hamburger animation */
@@ -245,6 +250,9 @@ a {
   letter-spacing: 0.1rem;
   margin-left: 70px;
 }
+.project-card img{
+  object-fit: contain;
+}
 /* Experience styling */
 #experience {
   font-family: "Open Sans", sans-serif;
@@ -313,6 +321,7 @@ a {
 }
 /* Contact Styling */
 .contact {
+  font-family: "Open Sans", sans-serif;
   padding: 80px 10%;
   text-align: center;
   background: #2e3c55;
@@ -373,31 +382,46 @@ a {
     transform: translateY(0);
   }
 }
+
+footer {
+  font-family: "Open Sans", sans-serif;
+  font-size: 15px;
+  background-color: transparent;
+  text-align: center;
+  padding: 2.5rem;
+  letter-spacing: 5px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #98e072;
+  border-top: 3px solid rgba(0, 0, 0, 0.1);
+  height: 110px;
+}
 @media (max-width: 600px) {
   .nav-bar {
     display: flex;
     justify-content: space-between;
   }
-  .nav-bar ul li {
+  /* .nav-bar ul li {
     display: none;
-  }
+  } */
   .hamburger {
     display: flex;
   }
 
   .nav-menu {
-    flex-direction: column;
     position: absolute;
-    top: 60px;
-    left: 0;
+    top: 100%;
+    right: 0;
+    background: #2e3c55;
+    flex-direction: column;
     width: 100%;
-    background-color: #2e3c55;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.4s ease-in-out;
+    text-align: center;
+    display: none;
+    z-index: 1500;
   }
 
   .nav-menu.active {
+    display: flex;
     max-height: 500px;
   }
 
@@ -405,7 +429,7 @@ a {
     padding: 15px;
     text-align: center;
   }
-   /* Hero styling */
+  /* Hero styling */
   .hero-section {
     padding-top: 170px;
     line-height: 25px;
