--- a/style.css
+++ b/style.css
@@ -454,8 +454,7 @@ footer {
     width: 100%;
     text-align: center;
     display: none;
-    /* z-index: 1500; */
-  }
+  } 
 
   .nav-menu.active {
     display: flex;
@@ -542,6 +541,7 @@ footer {
     font-size: 8px;
     padding: 0.5rem;
     letter-spacing: 3px;
-    height: 110px;
+    height: 120px;
+    line-height: 15px;
   }
 }
