--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 }
 /* Header styling */
 .nav-bar {
-  position: relative;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
@@ -66,7 +66,8 @@ a {
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
-  /* z-index: 1100; */
+  position: relative;
+  z-index: 2100;
 }
 
 .hamburger span {
@@ -447,18 +448,24 @@ footer {
 
   .nav-menu {
     position: absolute;
-    top: 100%;
+    top: 0;
     right: 0;
     background: #2e3c55;
     flex-direction: column;
     width: 100%;
+    z-index: 2000;
     text-align: center;
-    display: none;
-  } 
+    /* display: none; */
+  }
 
   .nav-menu.active {
     display: flex;
     max-height: 500px;
+  }
+
+  /* Ensure list items inside the nav-menu become visible when the menu is active */
+  .nav-menu.active li {
+    display: block;
   }
 
   .nav-menu li {
